# KurrentDB-Client-Rust

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md  codegen.rs  configure-tls-for-tests.yml  configure-user-certs-for-tests.yml  docker-compose.yml  vars.env
.github/workflows/: build-docs.yml  cherry-pick-pr-for-label.yml  deploy.yml  docker-repo.yml  publish-macros.yml  rust.yml  test-dispatch.yml  tests.yml
docs/: package.json  pnpm-lock.yaml
docs/.vuepress/: client.ts  config.ts
docs/api/: appending-events.md  authentication.md  delete-stream.md  getting-started.md  persistent-subscriptions.md  reading-events.md  subscriptions.md
eventstore/: Cargo.toml
eventstore-extras/: Cargo.toml
eventstore-js-bridge/: package-lock.json
eventstore-js-bridge/src/: client.rs  lib.rs
eventstore-macros/: Cargo.toml
eventstore-macros/src/: lib.rs
eventstore/src/: batch.rs  client.rs  commands.rs  grpc.rs  lib.rs  projection_client.rs  types.rs
eventstore/tests/: common.rs  images.rs  integration.rs
examples/: Cargo.toml  appending_events.rs  persistent_subscriptions.rs  quickstart.rs  reading_events.rs  server_side_filtering.rs  subscribing_to_stream.rs  user_certificates.rs
kurrent/: Cargo.toml
kurrent-extras/: Cargo.toml
kurrent-extras/src/: stats.rs
kurrent-macros/: Cargo.toml
kurrent/src/: client.rs  commands.rs  grpc.rs  lib.rs  types.rs
kurrent/tests/: common.rs  images.rs  integration.rs
kurrentdb/: Cargo.toml  codegen.rs
kurrentdb-extras/: Cargo.toml  README.md
kurrentdb-extras/src/: stats.rs
kurrentdb-macros/: Cargo.toml
kurrentdb/protos/: multi-append.proto  projections.proto
kurrentdb/src/: batch.rs  client.rs  commands.rs  grpc.rs  lib.rs  new_commands.rs  projection_client.rs  request.rs  types.rs
kurrentdb/tests/: integration.rs
protos/: persistent.proto  streams.proto
src/: client.rs  commands.rs  grpc.rs  lib.rs  private.rs  types.rs
tests/: integration.rs
(+54 files in other folders)
