[package]
name = "eventstore-macros"
version = "0.0.1"
edition = "2021"
license = "MIT"

description = "Extra KurrentDB gRPC client internal code generation features"
keywords = ["database", "eventsourcing", "eventstore", "kurrent", "grpc"]
repository = "https://github.com/kurrent-io/KurrentDB-Client-Rust"
categories = ["database", "api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full", "fold", "extra-traits"] }
quote = "1"