[package]
name = "kurrentdb-extras"
version = "0.1.0-alpha.1"
edition = "2024"

license = "MIT"

description = "KurrentDB gRPC client extra features"
keywords = ["database", "eventsourcing", "eventstore", "eventstoredb", "grpc"]
repository = "https://github.com/EventStore/EventStoreDB-Client-Rust"
categories = ["database", "api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# will move to version number once we got something stable.
kurrentdb = { path = "../kurrentdb", version = "1.0.0-alpha.1" }
chrono = { version = "0.4", default-features = false }
log = "0.4"
